--- a/docs/src/man/man9/hal_bb_gpio.9.adoc
+++ b/docs/src/man/man9/hal_bb_gpio.9.adoc
@@ -10,18 +10,16 @@ hal_bb_gpio - Driver for beaglebone GPIO pins
 
 == USER LEDS
 
-The _user_leds_ loadrt parameter controls which LEDs are available to
-HAL. Valid range: 0..3. These LEDs are next to the ethernet jack and the
-LinuxCNC numbers match the silkscreen on beaglbone black. Empirically,
-these seem to be OR'd with whatever function is assigned to the LED in
-Linux.
+The _user_leds_ loadrt parameter controls which LEDs are available to HAL.
+Valid range: 0..3. These LEDs are next to the ethernet jack and the
+LinuxCNC numbers match the silkscreen on beaglbone black.
+Empirically, these seem to be OR'd with whatever function is assigned to the LED in Linux.
 
 === PINS
 
-**bb_gpio.userled*_N_ bit in +
-**bb_gpio.userled*_N_*-invert* bit in::
-  The associated LED is lit if *userled*_N_ xor *userled*_N_-invert is
-  TRUE.
+**bb_gpio.userled**_N_ bit in +
+**bb_gpio.userled**_N_**-invert** bit in::
+  The associated LED is lit if *userled*_N_ xor *userled*_N_-invert is TRUE.
 
 == INPUT PINS
 
@@ -38,7 +36,6 @@ system.
 === PINS
 
 **bb_gpio.p**_N_**.in-**_NN_ bit out +
-
 **bb_gpio.p**_N_**.in-**_NN_**-invert** bit in::
   **in-**_NN_ is a snapshot of the value of the corresponding physical pin
   XOR the value of the corresponding **in-**_NN_**-invert** pin.
@@ -56,7 +53,6 @@ system.
 === PINS
 
 **bb_gpio.p**_N_**.out-**_NN_ bit out +
-
 **bb_gpio.p**_N_**.out-**_NN_**-invert** bit in::
   The corresponding physical pin is driven with the result of **in-**_NN_
   xor **in-**_NN_**-invert**.
