--- a/docs/src/man/man9/sim_encoder.9.adoc
+++ b/docs/src/man/man9/sim_encoder.9.adoc
@@ -6,7 +6,7 @@ sim_encoder - simulated quadrature encoder
 
 == SYNOPSIS
 
-*loadrt sim_encoder [num_chan=*_num_* | names=*_name1_*[,*_name2..._*]]*
+**loadrt sim_encoder [num_chan=**_num_ | **names=**_name1_[,_name2_...]]
 
 == DESCRIPTION
 
