--- a/docs/src/man/man9/counter.9.adoc
+++ b/docs/src/man/man9/counter.9.adoc
@@ -6,13 +6,12 @@ counter - counts input pulses *(DEPRECATED)*
 
 == SYNOPSIS
 
-*loadrt counter [num_chan=__N__*]**
+*loadrt counter* [**num_chan=**__N__]
 
 == DESCRIPTION
 
-*counter* is a deprecated HAL component and will be removed in a future
-release. Use the *encoder* component with encoder.X.counter-mode set to
-TRUE.
+*counter* is a deprecated HAL component and will be removed in a future release.
+Use the *encoder* component with encoder.X.counter-mode set to TRUE.
 
 *counter* is a HAL component that provides software- based counting that
 is useful for spindle position sensing and maybe other things. Instead
@@ -31,16 +30,14 @@ HAL manual.
 == FUNCTIONS
 
 *counter.capture-position* (uses floating-point)::
-  Updates the counts, position and velocity outputs based on internal
-  counters.
+  Updates the counts, position and velocity outputs based on internal counters.
 **counter.update-counters**::
   Samples the phase-A and phase-Z inputs and updates internal counters.
 
 == PINS
 
 **counter.**_N_**.phase-A** bit in::
-  The primary input signal. The internal counter is incremented on each
-  rising edge.
+  The primary input signal. The internal counter is incremented on each rising edge.
 **counter.**_N_**.phase-Z** bit in::
   The index input signal. When the *index-enable* pin is TRUE and a
   rising edge on *phase-Z* is seen, *index-enable* is set to FALSE and
@@ -58,11 +55,9 @@ HAL manual.
    +
 
 **counter.**_N_**.velocity** float out::
-  These pins function according to the canonical digital encoder
-  interface.
+  These pins function according to the canonical digital encoder interface.
 **counter.**_N_**.position-scale** float rw::
-  This parameter functions according to the canonical digital encoder
-  interface.
+  This parameter functions according to the canonical digital encoder interface.
 **counter.**_N_**.rawcounts** signed ro::
   The internal counts value, updated from *update-counters* and
   reflected in the output pins at the next call to *capture-position*.
