--- a/docs/src/man/man9/debounce.9.adoc
+++ b/docs/src/man/man9/debounce.9.adoc
@@ -6,7 +6,7 @@ debounce - filter noisy digital inputs
 
 == SYNOPSIS
 
-*loadrt debounce cfg=__size[,size,...]__*
+**loadrt debounce cfg=**__size__[,__size__,...]
 
 Creates debounce groups with the number of filters specified by
 (_size_). Every filter in the same group has the same sample rate and
@@ -28,21 +28,21 @@ decrements to zero, the output is set false and the counter ignores
 further decrements. If the counter increments up to a threshold, the
 output is set true and the counter ignores further increments. If the
 counter is between zero and the threshold, the output retains its
-previous state. The threshold determines the amount of filtering: a
-threshold of 1 does no filtering at all, and a threshold of N requires a
-signal to be present for N samples before the output changes state.
+previous state. The threshold determines the amount of filtering:
+A threshold of 1 does no filtering at all, and a threshold of _N_ requires a
+signal to be present for _N_ samples before the output changes state.
 
 == FUNCTIONS
 
-*debounce._G_*::
-  Sample all the input pins in group G and update the output pins.
+**debounce.**_G_::
+  Sample all the input pins in group _G_ and update the output pins.
 
 == PINS
 
-**debounce.**_G_._F_**.in** bit in::
+**debounce.**_G_**.**_F_**.in** bit in::
   The F'th input pin in group G.
-**debounce.**_G_._F_**.out** bit out::
-  The F'th output pin in group G. Reflects the last "stable" input seen
-  on the corresponding input pin.
+**debounce.**_G_**.**_F_**.out** bit out::
+  The F'th output pin in group _G_.
+  Reflects the last "stable" input seen on the corresponding input pin.
 **debounce.**_G_**.delay** signed rw::
-  Sets the amount of filtering for all pins in group G.
+  Sets the amount of filtering for all pins in group _G_.
