--- a/docs/src/man/man9/gladevcp.9.adoc
+++ b/docs/src/man/man9/gladevcp.9.adoc
@@ -6,12 +6,12 @@ gladevcp - displays Virtual control Panels built with GTK / GLADE
 
 == SYNOPSIS
 
-**loadusr gladevcp [-c componentname0x**_N_**] [-g WxH+Xoffset+Yoffset0x**_N_**] [-H halcmdfile] [-x windowid] gladefile.glade**
+*loadusr gladevcp* [**-c componentname0x**_N_] [**-g WxH+Xoffset+Yoffset0x**_N_] [**-H** _halcmdfile_] [*-x* _windowid_] *gladefile.glade*
 
 == DESCRIPTION
 
-GladeVCP parses a glade file and displays the widgets in a window. Then
-calls gladevcp_makepins which again parses the gladefile looking for
+GladeVCP parses a glade file and displays the widgets in a window.
+Then calls gladevcp_makepins which again parses the gladefile looking for
 specific HAL widgets then makes HAL pins and sets up updating for them.
 The HAL component name defaults to the basename of the glade file. The
 -x option directs GladeVCP to reparent itself under this X window id
