--- a/docs/src/man/man9/hm2_pci.9.adoc
+++ b/docs/src/man/man9/hm2_pci.9.adoc
@@ -7,7 +7,7 @@ Anything IO boards, with HostMot2 firmware.
 
 == SYNOPSIS
 
-*loadrt hm2_pci [config=__"str[,str...]"__*]**
+*loadrt hm2_pci* [ **config="**__str__[,__str__...]**"** ]
 
 ____
 *config* [default: ""]::
@@ -17,8 +17,7 @@ ____
 == DESCRIPTION
 
 hm2_pci is a device driver that interfaces Mesa's PCI and PC-104/Plus
-based Anything I/O boards (with the HostMot2 firmware) to the LinuxCNC
-HAL.
+based Anything I/O boards (with the HostMot2 firmware) to the LinuxCNC HAL.
 
 The supported boards are: the 5i20, 5i21, 5i22, 5i23, 5i24, and 5i25
 (all on PCI); the 4i65, 4i68, and 4i69 (on PC-104/Plus), and the 3x20
