--- a/docs/src/man/man9/hm2_spi.9.adoc
+++ b/docs/src/man/man9/hm2_spi.9.adoc
@@ -7,8 +7,7 @@ boards, with HostMot2 firmware.
 
 == SYNOPSIS
 
-*loadrt hm2_spi [config=__"str[,str...]"__*]*
-[spidev_path=path[,path...]*]* [spidev_rate=__rate[,rate...]__*]**
+*loadrt hm2_spi* [**config="**__str__[,__str__...]**"** ] [ **spidev_path=**_path_[,_path_...] ] [**spidev_rate=**__rate__[,__rate__...] ]
 
 ____
 *config* [default: ""]::
@@ -18,8 +17,7 @@ ____
 *spidev_rate* [default: 24000]::
   The desired rate of the SPI clock in kHz. If the exact specified clock
   is not available, a lower clock is used. Due to shortcomings in the
-  spidev API, it is not possible for hal to report the actual clock
-  used.
+  spidev API, it is not possible for hal to report the actual clock used.
 ____
 
 == DESCRIPTION
@@ -32,8 +30,7 @@ The supported boards are: 7I90HD.
 The board must have a compatible firmware loaded on the board by the
 mesaflash(1) program.
 
-hm2_spi is only available when LinuxCNC is configured with "uspace"
-realtime.
+hm2_spi is only available when LinuxCNC is configured with "uspace" realtime.
 
 == INTERFACE CONFIGURATION
 
