--- a/docs/src/man/man9/lineardeltakins.9.adoc
+++ b/docs/src/man/man9/lineardeltakins.9.adoc
@@ -14,7 +14,7 @@ The kinematics model is appropriate for a rostock/kossel-style design
 with three joints arranged in an equilateral triangle. (0,0) is always
 the center of the working volume. Joint 0 is at (0,R) and subsequent
 joints are 120 degrees clockwise (note that joint 0 is not at zero
-radians). The length of the arm is L.
+radians). The length of the arm is _L_.
 
 Joints 0-2 are the linear carriages. Axes ABC and UVW are passed through
 unchanged in joints 3-8, so that e.g., A can still be used to control an
@@ -22,16 +22,16 @@ extruder.
 
 == PINS
 
-*lineardeltakins.R float in*::
+*lineardeltakins.R* float in::
   Effective diameter of the platform.
 
-R is different than the distance from the center of the table to the
+The radius R is different than the distance from the center of the table to the
 center of the belt/smooth rod/extrusion that the joints ride on. In
 RepRap delta parlance, R is DELTA_RADIUS which is computed as
 
 DELTA_SMOOTH_ROD_OFFSET - DELTA_EFFECTOR_OFFSET - DELTA_CARRIAGE_OFFSET.
 
-*lineardeltakins.L float in*::
+*lineardeltakins.L* float in::
   Length of the rod connecting the carriage to the effector. In RepRap
   delta parlance, L is DELTA_DIAGONAL_ROD.
 
