--- a/docs/src/man/man9/matrix_kb.9.adoc
+++ b/docs/src/man/man9/matrix_kb.9.adoc
@@ -2,15 +2,14 @@
 
 == NAME
 
-matrix_kb - Convert integers to HAL pins. Optionally scan a matrix of IO
+matrix_kb - Convert integers to HAL pins. Optionally scan a matrix of I/O
 ports to create those integers.
 
 == SYNOPSIS
 
-*loadrt matrix_kb config=__RxCs,RxCs__*...* names=__name1,name2__*...**
+**loadrt matrix_kb config=**__RxCs__,__RxCs__... **names=**__name1__,__name2__...
 
-Creates a component configured for R rows and N columns of matrix
-keyboard.
+Creates a component configured for R rows and N columns of matrix keyboard.
 
 If the *s* option is specified then a set of output rows will be
 cyclically toggled, and a set of input columns will be scanned.
@@ -23,12 +22,10 @@ There must be no spaces in the parameter lists.
 
 == DESCRIPTION
 
-This component was written to convert matrix keyboard scancodes into HAL
-pins. However, it might also find uses in converting integers from 0 to
-N into N HAL pins.
+This component was written to convert matrix keyboard scancodes into HAL pins.
+However, it might also find uses in converting integers from 0 to _N_ into _N_ HAL pins.
 
-The component can work in two ways, and the HAL pins created vary
-according to mode.
+The component can work in two ways, and the HAL pins created vary according to mode.
 
 In the default mode the component expects to be given a scan code from a
 separate driver but could be any integer from any source. Most typically
@@ -40,7 +37,7 @@ configs for the 7I73 are 4x8 and 8x8. Note that the component will only
 work properly with the version 12 (0xC) 7I73 firmware. The firmware
 version is visible on the component parameters in HAL.
 
-In the optional scan-generation mode the *matrix_kb.*_N_*.keycode* pin
+In the optional scan-generation mode the **matrix_kb.**_N_**.keycode** pin
 changes to an output pin and a set of output row pins and input column
 pins are created. These need to be connected to physical inputs and
 outputs to scan the matrix and return values to HAL. Note the
@@ -52,29 +49,29 @@ node of the matrix.
 
 == FUNCTIONS
 
-*matrix_kb._N_*::
+**matrix_kb.**_N_::
   Perform all requested functions. Should be run in a slow thread for
   effective debouncing.
 
 == PINS
 
-*matrix_kb._N_*.col-*_CC_*-in* bit in*::
+**matrix_kb.**_N_**.col-**_CC_**-in** bit in*::
   The input pin corresponding to column C.
-*matrix_kb._N_*.key.r*_R_*c*_C_ bit out*::
+**matrix_kb.**_N_**.key.r**_R_**c**_C_ bit out*::
   The pin corresponding to the key at row R column C of the matrix.
-*matrix_kb._N_*.keycode* unsigned in or out depending on mode.*::
+**matrix_kb.**_N_**.keycode** unsigned in or out, depending on mode::
   This pin should be connected to the scancode generator if hardware
   such as a 7I73 is being used. In this mode it is an input pin. In the
   internally-generated scanning mode this pin is an output, but will not
   normally be connected.
-*matrix_kb._N_*.row-*_RR_*-out* bit out*::
+**matrix_kb.**_N_**.row-**_RR_**-out** bit out*::
   The row scan drive pins. Should be connected to external hardware pins
   connected to the keypad. The row scan drive pins.Should be connected
   to external hardware pins connected to the keypad.
 
 == PARAMETERS
 
-*matrix_kb._N_*.key_rollover* unsigned r/w (default 2)*::
+**matrix_kb.*_N_**.key_rollover** unsigned r/w (default 2)::
   With most matrix keyboards the scancodes are only unambiguous with 1
   or 2 keys pressed. With more keys pressed phantom keystrokes can
   appear. Some keyboards are optimised to reduce this problem, and some
@@ -82,9 +79,8 @@ node of the matrix.
   simultaneously. Increase the value of this parameter if such a
   keyboard is connected, or if phantom keystrokes are more acceptable
   than only two keys being active at one time.
-*matrix_kb._N_*.negative-logic* bit r/w (default 1) only in scan mode*::
-  When no keys are pressed a typical digital input will float high. The
-  input will then be pulled low by the keypad when the corresponding
-  poll line is low. Set this parameter to 0 if the IO in use requires
-  one row at a time to be high, and a high input corresponds to a button
-  press.
+**matrix_kb.**_N_**.negative-logic** bit r/w (default 1), only in scan mode::
+  When no keys are pressed a typical digital input will float high.
+  The input will then be pulled low by the keypad when the corresponding poll line is low.
+  Set this parameter to 0 if the I/O in use requires one row at a time to be high,
+  and a high input corresponds to a button press.
