--- a/docs/src/man/man9/opto_ac5.9.adoc
+++ b/docs/src/man/man9/opto_ac5.9.adoc
@@ -6,7 +6,7 @@ opto_ac5 - Realtime driver for opto22 PCI-AC5 cards
 
 == SYNOPSIS
 
-*loadrt opto_ac5 [portconfig0=0x*_N_*] [portconfig1=0x*_N_*] *
+*loadrt opto_ac5* [**portconfig0=0x**_N_] [**portconfig1=0x**_N_]
 
 == DESCRIPTION
 
@@ -19,8 +19,8 @@ HAL pin 1, header connector pin 45 and so on, until bit 24 would be HAL
 pin 23, header connector pin 1. "1" bits represent output points. So
 channel 0..11 as inputs and 12..23 as outputs would be represented by
 (in binary) 111111111111000000000000 which is 0xfff000 in hexadecimal.
-That is the number you would use, e.g., loadrt opto_ac5
-portconfig0=0xfff000
+That is the number you would use, e.g.,
+`loadrt opto_ac5 portconfig0=0xfff000`.
 
 If no portconfig variable is specified the default configuration is 12
 inputs then 12 outputs.
@@ -31,30 +31,25 @@ Portnumber can be 0 or 1. Port 0 is closest to the card bracket.
 
 == PINS
 
-*opto_ac5.[*_BOARDNUMBER_].*port[*_PORTNUMBER_].*in-[*_PINNUMBER_] OUT
-bit ::
+**opto_ac5.**_BOARDNUMBER_**.port.**_PORTNUMBER_**.in-**_PINNUMBER_ OUT bit::
    +
 
-*opto_ac5.[*_BOARDNUMBER_].*port[*_PORTNUMBER_].*in-[*_PINNUMBER_]-not
-OUT bit ::
-  Connect a HAL bit signal to this pin to read an i/o point from the
-  card. The PINNUMBER represents the position in the relay rack. E.g.,
-  PINNUMBER 0 is position 0 in a opto22 relay rack and would be pin 47
-  on the 50 pin header connector. The *-not* pin is inverted so that LOW
-  gives TRUE and HIGH gives FALSE.
-*opto_ac5.[*_BOARDNUMBER_].*port[*_PORTNUMBER_].*out-[*_PINNUMBER_] IN
-bit ::
+**opto_ac5.**_BOARDNUMBER_**.port.**_PORTNUMBER_**.in-**_PINNUMBER_**-not** OUT bit::
+  Connect a HAL bit signal to this pin to read an i/o point from the card.
+  The PINNUMBER represents the position in the relay rack.  E.g., PINNUMBER 0 is
+  position 0 in a opto22 relay rack and would be pin 47 on the 50 pin header connector.
+  The *-not* pin is inverted so that LOW gives TRUE and HIGH gives FALSE.
+**opto_ac5.**_BOARDNUMBER_**.port.**_PORTNUMBER_**.out-**_PINNUMBER_ IN bit::
   Connect a HAL bit signal to this pin to write to an i/o point of the
   card. The PINNUMBER represents the position in the relay rack. E.g.,
   PINNUMBER 23 is position 23 in a opto22 relay rack and would be pin 1
   on the 50 pin header connector.
-*opto_ac5.[*_BOARDNUMBER_].*led[*_NUMBER_] OUT bit ::
+**opto_ac5.**_BOARDNUMBER_**.led.**_NUMBER_ OUT bit::
   Turns one of the on board LEDS on/off. LEDS are numbered 0 to 3.
 
 == PARAMETERS
 
-*opto_ac5.[*_BOARDNUMBER_].*port[*_PORTNUMBER_].*out-[*_PINNUMBER_]-invert
-W bit ::
+**opto_ac5.**_BOARDNUMBER_**.port.**_PORTNUMBER_**.out-**_PINNUMBER_**-invert** W bit::
   When TRUE, invert the meaning of the corresponding *-out* pin so that
   TRUE gives LOW and FALSE gives HIGH.
 
@@ -67,8 +62,7 @@ W bit ::
 
 == BUGS
 
-All boards are loaded with the same port configurations as the first
-board.
+All boards are loaded with the same port configurations as the first board.
 
 == SEE ALSO
 
