--- a/docs/src/man/man9/pid.9.adoc
+++ b/docs/src/man/man9/pid.9.adoc
@@ -7,7 +7,7 @@ support
 
 == SYNOPSIS
 
-*loadrt pid [num_chan=*_num_* | names=*_name1_*[,*_name2..._*]] [debug=*_dbg_]
+*loadrt pid* [**num_chan=**_num_ | **names=**_name1_[,_name2_..._]] [debug=*_dbg_]
 
 == DESCRIPTION
 
@@ -31,8 +31,7 @@ position loops. However this component can be used to implement other
 loops such as speed loops, torch height control, and others.
 
 Each loop has a number of pins and parameters, whose names begin with
-'pid.N.', where 'N' is the channel number. Channel numbers start at
-zero.
+'**pid.**_N_**.**', where _N_ is the channel number. Channel numbers start at zero.
 
 The three most important pins are 'command', 'feedback', and 'output'.
 For a position loop, 'command' and 'feedback' are in position units. For
@@ -164,55 +163,54 @@ The *pid.N.* format is shown in the following descriptions.
 
 == FUNCTIONS
 
-*pid.*_N_*.do-pid-calcs* (uses floating-point) Does the PID calculations
-for control loop _N_.
+**pid.**_N_**.do-pid-calcs** (uses floating-point) performs the PID calculations for control loop _N_.
 
 == PINS
 
-*pid.*_N_*.command* float in::
+**pid.**_N_**.command** float in::
   The desired (commanded) value for the control loop.
-*pid.*_N_*.Pgain* float in::
+**pid.**_N_**.Pgain** float in::
   Proportional gain. Results in a contribution to the output that is the
   error multiplied by *Pgain*.
-*pid.*_N_*.Igain* float in::
+**pid.**_N_**.Igain** float in::
   Integral gain. Results in a contribution to the output that is the
   integral of the error multiplied by *Igain*. For example an error of
   0.02 that lasted 10 seconds would result in an integrated error
   (*errorI*) of 0.2, and if *Igain* is 20, the integral term would add
   4.0 to the output.
-*pid.*_N_*.Dgain* float in::
+**pid.**_N_**.Dgain** float in::
   Derivative gain. Results in a contribution to the output that is the
   rate of change (derivative) of the error multiplied by *Dgain*. For
   example an error that changed from 0.02 to 0.03 over 0.2 seconds would
   result in an error derivative (*errorD*) of of 0.05, and if *Dgain* is
   5, the derivative term would add 0.25 to the output.
-*pid.*_N_*.feedback* float in::
+**pid.**_N_**.feedback** float in::
   The actual (feedback) value, from some sensor such as an encoder.
-*pid.*_N_*.output* float out::
+**pid.**_N_**.output** float out::
   The output of the PID loop, which goes to some actuator such as a
   motor.
-*pid.*_N_*.command-deriv* float in::
+**pid.**_N_**.command-deriv** float in::
   The derivative of the desired (commanded) value for the control loop.
   If no signal is connected then the derivative will be estimated
   numerically.
-*pid.*_N_*.feedback-deriv* float in::
+**pid.**_N_**.feedback-deriv** float in::
   The derivative of the actual (feedback) value for the control loop. If
   no signal is connected then the derivative will be estimated
   numerically. When the feedback is from a quantized position source
   (e.g., encoder feedback position), behavior of the D term can be
   improved by using a better velocity estimate here, such as the
   velocity output of encoder(9) or hostmot2(9).
-*pid.*_N_*.error-previous-target* bit in::
+**pid.**_N_**.error-previous-target** bit in::
   Use previous invocation's target vs. current position for error
   calculation, like the motion controller expects. This may make
   torque-mode position loops and loops requiring a large I gain easier
   to tune, by eliminating velocity-dependent following error.
-*pid.*_N_*.error* float out::
+**pid.**_N_**.error** float out::
   The difference between command and feedback.
-*pid.*_N_*.enable* bit in::
+**pid.**_N_**.enable** bit in::
   When true, enables the PID calculations. When false, *output* is zero,
   and all internal integrators, etc, are reset.
-*pid.*_N_*.index-enable* bit in::
+**pid.**_N_**.index-enable** bit in::
   On the falling edge of *index-enable*, pid does not update the
   internal command derivative estimate. On systems which use the encoder
   index pulse, this pin should be connected to the index-enable signal.
@@ -220,7 +218,7 @@ for control loop _N_.
   command causes a single-cycle spike in the PID output. On systems
   which use exactly one of the *-deriv* inputs, this affects the D term
   as well.
-*pid.*_N_*.bias* float in::
+**pid.**_N_**.bias** float in::
   *bias* is a constant amount that is added to the output. In most cases
   it should be left at zero. However, it can sometimes be useful to
   compensate for offsets in servo amplifiers, or to balance the weight
@@ -228,34 +226,34 @@ for control loop _N_.
   loop is disabled, just like all other components of the output. If a
   non-zero output is needed even when the PID loop is disabled, it
   should be added with an external HAL sum2 block.
-*pid.*_N_*.FF0* float in::
+**pid.**_N_**.FF0** float in::
   Zero order feed-forward term. Produces a contribution to the output
   that is *FF0* multiplied by the commanded value. For position loops,
   it should usually be left at zero. For velocity loops, *FF0* can
   compensate for friction or motor counter-EMF and may permit better
   tuning if used properly.
-*pid.*_N_*.FF1* float in::
+**pid.**_N_**.FF1** float in::
   First order feed-forward term. Produces a contribution to the output
   that is *FF1* multiplied by the derivative of the commanded value. For
   position loops, the contribution is proportional to speed, and can be
   used to compensate for friction or motor CEMF. For velocity loops, it
   is proportional to acceleration and can compensate for inertia. In
   both cases, it can result in better tuning if used properly.
-*pid.*_N_*.FF2* float in::
+**pid.**_N_**.FF2** float in::
   Second order feed-forward term. Produces a contribution to the output
   that is *FF2* multiplied by the second derivative of the commanded
   value. For position loops, the contribution is proportional to
   acceleration, and can be used to compensate for inertia. For velocity
   loops, the contribution is proportional to jerk, and should usually be
   left at zero.
-*pid.*_N_*.FF3* float in::
+**pid.**_N_**.FF3** float in::
   Third order feed-forward term. Produces a contribution to the output
   that is *FF3* multiplied by the third derivative of the commanded
   value. For position loops, the contribution is proportional to jerk,
   and can be used to compensate for residual errors during acceleration.
   For velocity loops, the contribution is proportional to snap(jounce),
   and should usually be left at zero.
-*pid.*_N_*.deadband* float in::
+**pid.**_N_**.deadband** float in::
   Defines a range of "acceptable" error. If the absolute value of
   *error* is less than *deadband*, it will be treated as if the error is
   zero. When using feedback devices such as encoders that are inherently
@@ -266,100 +264,95 @@ for control loop _N_.
   subtracted from the error before performing the loop calculations, to
   prevent a step in the transfer function at the edge of the deadband
   (see *BUGS*).
-*pid.*_N_*.maxoutput* float in::
+**pid.**_N_**.maxoutput** float in::
   Output limit. The absolute value of the output will not be permitted
   to exceed *maxoutput*, unless *maxoutput* is zero. When the output is
   limited, the error integrator will hold instead of integrating, to
   prevent windup and overshoot.
-*pid.*_N_*.maxerror* float in::
+**pid.**_N_**.maxerror** float in::
   Limit on the internal error variable used for P, I, and D. Can be used
   to prevent high *Pgain* values from generating large outputs under
   conditions when the error is large (for example, when the command
   makes a step change). Not normally needed, but can be useful when
   tuning non-linear systems.
-*pid.*_N_*.maxerrorD* float in::
+**pid.**_N_**.maxerrorD** float in::
   Limit on the error derivative. The rate of change of error used by the
   *Dgain* term will be limited to this value, unless the value is zero.
   Can be used to limit the effect of *Dgain* and prevent large output
-  spikes due to steps on the command and/or feedback. Not normally
-  needed.
-*pid.*_N_*.maxerrorI* float in::
+  spikes due to steps on the command and/or feedback. Not normally needed.
+**pid.**_N_**.maxerrorI** float in::
   Limit on error integrator. The error integrator used by the *Igain*
   term will be limited to this value, unless it is zero. Can be used to
   prevent integrator windup and the resulting overshoot during/after
   sustained errors. Not normally needed.
-*pid.*_N_*.maxcmdD* float in::
+**pid.**_N_**.maxcmdD** float in::
   Limit on command derivative. The command derivative used by *FF1* will
   be limited to this value, unless the value is zero. Can be used to
   prevent *FF1* from producing large output spikes if there is a step
   change on the command. Not normally needed.
-*pid.*_N_*.maxcmdDD* float in::
+**pid.**_N_**.maxcmdDD** float in::
   Limit on command second derivative. The command second derivative used
   by *FF2* will be limited to this value, unless the value is zero. Can
   be used to prevent *FF2* from producing large output spikes if there
   is a step change on the command. Not normally needed.
-*pid.*_N_*.maxcmdDDD* float in::
+**pid.**_N_**.maxcmdDDD** float in::
   Limit on command third derivative. The command third derivative used
   by *FF3* will be limited to this value, unless the value is zero. Can
   be used to prevent *FF3* from producing large output spikes if there
   is a step change on the command. Not normally needed.
-*pid.*_N_*.saturated* bit out::
+**pid.**_N_**.saturated** bit out::
   When true, the current PID output is saturated. That is,
   +
   *output* = ± *maxoutput*.
-*pid.*_N_*.saturated-s* float out::
-   +
+**pid.**_N_**.saturated-s** float out::
 
-*pid.*_N_*.saturated-count* s32 out::
+**pid.**_N_**.saturated-count** s32 out::
   When true, the output of PID was continually saturated for this many
   seconds (*saturated-s*) or periods (*saturated-count*).
 
 === Additional auto tuning pins
 
-*pid.*_N_*.tune-mode* bit in::
-  When true, enables auto tune mode. When false, normal PID calculations
-  are performed.
-*pid.*_N_*.tune-start* bit io::
-  When set to true, starts auto tuning. Cleared when the auto tuning
-  completes.
-*pid.*_N_*.tune-type* u32 rw::
-  When set to 0, *Pgain/Igain/Dgain* are calculated. When set to 1,
-  *Pgain/Igain/FF1* are calculated.
-*pid.*_N_*.tune-cycles* u32 rw::
+**pid.**_N_**.tune-mode** bit in::
+  When true, enables auto tune mode. When false, normal PID calculations are performed.
+**pid.**_N_**.tune-start** bit io::
+  When set to true, starts auto tuning. Cleared when the auto tuning completes.
+**pid.**_N_**.tune-type* u32 rw::
+  When set to 0, *Pgain/Igain/Dgain* are calculated. When set to 1, *Pgain/Igain/FF1* are calculated.
+**pid.**_N_**.tune-cycles** u32 rw::
   Determines the number of cycles to run to characterize the process.
   *tune-cycles* actually sets the number of half cycles. More cycles
   results in a more accurate characterization as the average of all
   cycles is used.
-*pid.*_N_*.tune-effort* float rw::
+**pid.**_N_**.tune-effort** float rw::
   The maximum output value used during automatic tuning. Determines the
   effort used in setting up the limit cycle in the process.
   *tune-effort* should be set to a positive value less than *maxoutput*.
   Start with something small and work up to a value that results in a
   good portion of the maximum motor current being used. The smaller the
   value, the smaller the amplitude of the limit cycle.
-*pid.*_N_*.ultimate-gain* float ro (only if debug=1)::
+**pid.**_N_**.ultimate-gain** float ro (only if debug=1)::
   Determined from process characterization. *ultimate-gain* is the ratio
   of *tune-effort* to the limit cycle amplitude multiplied by 4.0
   divided by Pi.
-*pid.*_N_*.ultimate-period* float ro (only if debug=1)::
+**pid.**_N_**.ultimate-period** float ro (only if debug=1)::
   Determined from process characterization. *ultimate-period* is the
   period of the limit cycle.
 
 == PARAMETERS
 
-*pid.*_N_*.errorI* float ro (only if debug=1)::
+**pid.**_N_**.errorI** float ro (only if debug=1)::
   Integral of error. This is the value that is multiplied by *Igain* to
   produce the Integral term of the output.
-*pid.*_N_*.errorD* float ro (only if debug=1)::
+**pid.**_N_**.errorD** float ro (only if debug=1)::
   Derivative of error. This is the value that is multiplied by *Dgain*
   to produce the Derivative term of the output.
-*pid.*_N_*.commandD* float ro (only if debug=1)::
+**pid.**_N_**.commandD** float ro (only if debug=1)::
   Derivative of command. This is the value that is multiplied by *FF1*
   to produce the first order feed-forward term of the output.
-*pid.*_N_*.commandDD* float ro (only if debug=1)::
+**pid.**_N_**.commandDD** float ro (only if debug=1)::
   Second derivative of command. This is the value that is multiplied by
   *FF2* to produce the second order feed-forward term of the output.
-*pid.*_N_*.commandDDD* float ro (only if debug=1)::
+**pid.**_N_**.commandDDD** float ro (only if debug=1)::
   Third derivative of command. This is the value that is multiplied by
   *FF3* to produce the third order feed-forward term of the output.
 
