--- a/docs/src/man/man9/sampler.9.adoc
+++ b/docs/src/man/man9/sampler.9.adoc
@@ -6,12 +6,11 @@ sampler - sample data from HAL in real time
 
 == SYNOPSIS
 
-*loadrt sampler* *depth=*_depth1[,depth2...]_
-*cfg=*_string1[,string2...]_
+*loadrt sampler* **depth=**_depth1_[,_depth2_...] **cfg=**_string1_[,_string2_...]
 
 == DESCRIPTION
 
-*sampler* and *halsampler*(1) are used together to sample HAL data in
+*sampler* and **halsampler**(1) are used together to sample HAL data in
 real time and store it in a file. *sampler* is a realtime HAL component
 that exports HAL pins and creates a FIFO in shared memory. It then
 begins sampling data from the HAL and storing it to the FIFO.
@@ -21,13 +20,13 @@ program.
 
 == OPTIONS
 
-*depth=*_depth1[,depth2...]_::
+*depth=*_depth1_[,_depth2_...]::
   sets the depth of the realtime->non-realtime FIFO that *sampler*
   creates to buffer the realtime data. Multiple values of _depth_
   (separated by commas) can be specified if you need more than one FIFO
   (for example if you want to sample data from two different realtime
   threads).
-*cfg=*_string1[,string2...]_::
+*cfg=*_string1_[,_string2_...]::
   defines the set of HAL pins that *sampler* exports and later samples
   data from. One _string_ must be supplied for each FIFO, separated by
   commas. *sampler* exports one pin for each character in _string._
@@ -65,11 +64,11 @@ program.
 
 == PARAMETERS
 
-*sampler.*_N_*.overruns* s32 read/write::
+**sampler.**_N_**.overruns** s32 read/write::
   The number of times that *sampler* has tried to write data to the HAL
   pins but found no room in the FIFO. It increments whenever *full* is
   true, and can be reset by the *setp* command.
-*sampler.*_N_*.sample-num* s32 read/write::
+**sampler.**_N_**.sample-num** s32 read/write::
   A number that identifies the sample. It is automatically incremented
   for each sample, and can be reset using the *setp* command. The sample
   number can optionally be printed in the first column of the output
