--- a/docs/src/man/man9/sserial.9.adoc
+++ b/docs/src/man/man9/sserial.9.adoc
@@ -32,7 +32,7 @@ three per-port pins and three parameters.
 
 *Pins:*
 
-(bit, in) .sserial.port-N.run: Enables the specific Smart Serial module.
+(bit, in) .sserial.port-N.run:: Enables the specific Smart Serial module.
 Setting this pin low will disable all boards on the port and puts the
 port in a pass-through mode where device parameter setting is possible.
 It is necessary to toggle the state of this pin if there is a
@@ -41,23 +41,23 @@ defaults to TRUE and can be left unconnected. However, toggling the pin
 low-to-high will re-enable a faulted drive so the pin could usefully be
 connected to the iocontrol.0.user-enable-out pin.
 
-(u32, ro) .run_state: Shows the state of the sserial communications
+(u32, ro) .run_state:: Shows the state of the sserial communications
 state-machine. This pin will generally show a value of 0x03 in normal
 operation, 0x07 in setup mode and 0x00 when the "run" pin is false.
 
-(u32, ro) .error-count: Indicates the state of the Smart Serial error
+(u32, ro) .error-count:: Indicates the state of the Smart Serial error
 handler, see the parameters section for more details.
 
 *Parameters:*
 
-(u32 r/w) .fault-inc: Any over-run or handshaking error in the
+(u32 r/w) .fault-inc:: Any over-run or handshaking error in the
 SmartSerial communications will increment the .fault-count pin by the
 amount specified by this parameter. Default = 10.
 
-(u32 r/w) .fault-dec: Every successful read/write cycle decrements the
+(u32 r/w) .fault-dec:: Every successful read/write cycle decrements the
 fault counter by this amount. Default = 1.
 
-(u32 r/w) .fault-lim: When the fault counter reaches this threshold the
+(u32 r/w) .fault-lim:: When the fault counter reaches this threshold the
 Smart Serial interface on the corresponding port will be stopped and an
 error printed in dmesg. Together these three pins allow for control over
 the degree of fault- tolerance allowed in the interface. The default
@@ -127,7 +127,9 @@ correlate in layout or number to the physical ports on the card.
   details.
 (bit, ro) status and fault.::
   The following fault/status bits are exported. For further details see
-  the 8I20 manual. fault.U-current / fault.U-current-not fault.V-current
+  the 8I20 manual:
+  
+  fault.U-current / fault.U-current-not fault.V-current
   / fault.V-current-not fault.W-current / fault.W-current-not
   fault.bus-high / fault.bus-high-not fault.bus-overv /
   fault.bus-overv-not fault.bus-underv / fault.bus-underv-not
@@ -136,29 +138,29 @@ correlate in layout or number to the physical ports on the card.
   fault.overcurrent-not fault.overrun / fault.overrun-not fault.overtemp
   / fault.overtemp-not fault.watchdog / fault.watchdog-not
 
-status.brake-old / status.brake-old-not status.brake-on /
-status.brake-on-not status.bus-underv / status.bus-underv-not
-status.current-lim / status.current-lim-no status.ext-reset /
-status.ext-reset-not status.no-enable / status.no-enable-not
-status.pid-on / status.pid-on-not status.sw-reset / status.sw-reset-not
-status.wd-reset / status.wd-reset-not
+  status.brake-old / status.brake-old-not status.brake-on /
+  status.brake-on-not status.bus-underv / status.bus-underv-not
+  status.current-lim / status.current-lim-no status.ext-reset /
+  status.ext-reset-not status.no-enable / status.no-enable-not
+  status.pid-on / status.pid-on-not status.sw-reset / status.sw-reset-not
+  status.wd-reset / status.wd-reset-not
 
 *Parameters:*::
   The following parameters are exported. See the PDF documentation
-  downloadable from Mesa for further details.
+  downloadable from Mesa for further details:
 
-hm2_5i25.0.8i20.0.1.angle-maxlim hm2_5i25.0.8i20.0.1.angle-minlim
-hm2_5i25.0.8i20.0.1.angle-scalemax hm2_5i25.0.8i20.0.1.current-maxlim
-hm2_5i25.0.8i20.0.1.current-minlim hm2_5i25.0.8i20.0.1.current-scalemax
-hm2_5i25.0.8i20.0.1.nvbrakeoffv hm2_5i25.0.8i20.0.1.nvbrakeonv
-hm2_5i25.0.8i20.0.1.nvbusoverv hm2_5i25.0.8i20.0.1.nvbusundervmax
-hm2_5i25.0.8i20.0.1.nvbusundervmin hm2_5i25.0.8i20.0.1.nvkdihi
-hm2_5i25.0.8i20.0.1.nvkdil hm2_5i25.0.8i20.0.1.nvkdilo
-hm2_5i25.0.8i20.0.1.nvkdp hm2_5i25.0.8i20.0.1.nvkqihi
-hm2_5i25.0.8i20.0.1.nvkqil hm2_5i25.0.8i20.0.1.nvkqilo
-hm2_5i25.0.8i20.0.1.nvkqp hm2_5i25.0.8i20.0.1.nvmaxcurrent
-hm2_5i25.0.8i20.0.1.nvrembaudrate hm2_5i25.0.8i20.0.1.swrevision
-hm2_5i25.0.8i20.0.1.unitnumber
+  hm2_5i25.0.8i20.0.1.angle-maxlim hm2_5i25.0.8i20.0.1.angle-minlim
+  hm2_5i25.0.8i20.0.1.angle-scalemax hm2_5i25.0.8i20.0.1.current-maxlim
+  hm2_5i25.0.8i20.0.1.current-minlim hm2_5i25.0.8i20.0.1.current-scalemax
+  hm2_5i25.0.8i20.0.1.nvbrakeoffv hm2_5i25.0.8i20.0.1.nvbrakeonv
+  hm2_5i25.0.8i20.0.1.nvbusoverv hm2_5i25.0.8i20.0.1.nvbusundervmax
+  hm2_5i25.0.8i20.0.1.nvbusundervmin hm2_5i25.0.8i20.0.1.nvkdihi
+  hm2_5i25.0.8i20.0.1.nvkdil hm2_5i25.0.8i20.0.1.nvkdilo
+  hm2_5i25.0.8i20.0.1.nvkdp hm2_5i25.0.8i20.0.1.nvkqihi
+  hm2_5i25.0.8i20.0.1.nvkqil hm2_5i25.0.8i20.0.1.nvkqilo
+  hm2_5i25.0.8i20.0.1.nvkqp hm2_5i25.0.8i20.0.1.nvmaxcurrent
+  hm2_5i25.0.8i20.0.1.nvrembaudrate hm2_5i25.0.8i20.0.1.swrevision
+  hm2_5i25.0.8i20.0.1.unitnumber
 
 (float, rw) max_current::
   Sets the maximum drive current in Amps. The default value is the
@@ -173,31 +175,29 @@ hm2_5i25.0.8i20.0.1.unitnumber
 
 The 7I64 is a 24-input 24-output IO card. 7I64 pins and parameters have
 names like
-"hm2__<BoardType>_._<BoardNum>_.7i64.<PortNum>.<ChanNum>.<Pin>", for
-example hm2_5i23.0.7i64.1.3.output-01 .
+"hm2__<BoardType>__.__<BoardNum>__.7i64.__<PortNum>__.__<ChanNum>__.__<Pin>__", for
+example `hm2_5i23.0.7i64.1.3.output-01`.
 
 *Pins:*
 
-(bit, in) 7i64.0.0.output-NN: Writing a 1 or TRUE to this pin will
+7i64.0.0.output-NN (bit, in):: Writing a 1 or TRUE to this pin will
 enable output driver NN. Note that the outputs are drivers (switches)
 rather than voltage outputs. The LED adjacent to the connector on the
 board shows the status. The output can be inverted by setting a
 parameter.
 
-(bit, out) 7i64.0.0.input-NN: The value of input NN. Note that the
+7i64.0.0.input-NN (bit, out):: The value of input NN. Note that the
 inputs are isolated and both pins of each input must be connected,
 typically to signal and the ground of the signal. (This need not be the
 ground of the board.)
 
-(bit, out) 7i64.0.0.input-NN-not: An inverted copy of the corresponding
-input.
+7i64.0.0.input-NN-not (bit, out):: An inverted copy of the corresponding input.
 
-(float, out) 7i64.0.0.analog0 & 7i64.0.0.analog1: The two analogue
-inputs (0 to 3.3 V) on the board.
+7i64.0.0.analog0 & 7i64.0.0.analog1 (float, out):: The two analogue inputs (0 to 3.3 V) on the board.
 
 *Parameters:*
 
-(bit, rw) 7i64.0.0.output-NN-invert: Setting this parameter to 1 / TRUE
+7i64.0.0.output-NN-invert (bit, rw):: Setting this parameter to 1 / TRUE
 will invert the output value, such that writing 0 to .gpio.NN.out will
 enable the output and vice-versa.
 
@@ -212,66 +212,55 @@ the smart-serial pins are associated with the 7I76
 
 *Pins:*
 
-(float out) .7i76.0.0.analogN (modes 1 and 2 only) Analogue input
-values.
+(float out) .7i76.0.0.analogN (modes 1 and 2 only):: Analogue input values.
 
-(float out) .7i76.0.0.fieldvoltage (mode 2 only) Field voltage
-monitoring pin.
+(float out) .7i76.0.0.fieldvoltage (mode 2 only):: Field voltage monitoring pin.
 
-(bit in) .7i76.0.0.spindir: This pin provides a means to drive the
-spindle VFD direction terminals on the 7I76 board.
+(bit in) .7i76.0.0.spindir:: This pin provides a means to drive the spindle VFD direction terminals on the 7I76 board.
 
-(bit in) .7i76.0.0.spinena: This pin drives the spindle-enable terminals
-on the 7I76 board.
+(bit in) .7i76.0.0.spinena:: This pin drives the spindle-enable terminals on the 7I76 board.
 
-(float in) .7i76.0.0.spinout: This controls the analogue output of the
-7I76. This is intended as a speed control signal for a VFD.
+(float in) .7i76.0.0.spinout:: This controls the analogue output of the 7I76. This is intended as a speed control signal for a VFD.
 
-(bit out) .7i76.0.0.output-NN: (NN = 0 to 15). 16 digital outputs. The
-sense of the signal can be set via a parameter.
+(bit out) .7i76.0.0.output-NN:: (NN = 0 to 15). 16 digital outputs. The sense of the signal can be set via a parameter.
 
-(bit out) .7i76.0.0.input-NN: (NN = 0 to 31) 32 digital inputs.
+(bit out) .7i76.0.0.input-NN:: (NN = 0 to 31) 32 digital inputs.
 
-(bit in) .7i76.0.0.input-NN-not: (NN = 0 to 31) An inverted copy of the
-inputs provided for convenience. The two complementary pins may be
-connected to different signal nets.
+(bit in) .7i76.0.0.input-NN-not:: (NN = 0 to 31) An inverted copy of the inputs provided for convenience.
+  The two complementary pins may be connected to different signal nets.
 
 *Parameters:*
 
-(u32 ro) .7i76.0.0.nvbaudrate: Indicates the vbaud rate. This probably
-should not be altered.
+(u32 ro) .7i76.0.0.nvbaudrate:: Indicates the vbaud rate. This probably should not be altered.
 
-(u32 ro) .7i76.0.0.nvunitnumber: Indicates the serial number of the
+(u32 ro) .7i76.0.0.nvunitnumber:: Indicates the serial number of the
 device and should match a sticker on the card. This can be useful for
 working out which card is which.
 
-(u32 ro) .7i76.0.0.nvwatchdogtimeout: The sserial remote watchdog
+(u32 ro) .7i76.0.0.nvwatchdogtimeout:: The sserial remote watchdog
 timeout. This is separate from the Anything-IO card timeout. This is
 unlikely to need to be changed.
 
-(bit rw) .7i76.0.0.output-NN-invert: Invert the sense of the
+(bit rw) .7i76.0.0.output-NN-invert:: Invert the sense of the
 corresponding output pin.
 
-(bit rw) .7i76.0.0.spindir-invert: Invert the senseof the spindle
+(bit rw) .7i76.0.0.spindir-invert:: Invert the senseof the spindle
 direction pin.
 
-(bit rw) .7i76.0.0.spinena-invert: Invert the sense of the
+(bit rw) .7i76.0.0.spinena-invert:: Invert the sense of the
 spindle-enable pin.
 
-(float rw) .7i76.0.0.spinout-maxlim: The maximum speed request allowable
+(float rw) .7i76.0.0.spinout-maxlim:: The maximum speed request allowable
 
-(float rw) .7i76.0.0.spinout-minlim: The minimum speed request.
+(float rw) .7i76.0.0.spinout-minlim:: The minimum speed request.
 
-(float rw) .7i76.0.0.spinout-scalemax: The spindle speed scaling. This
-is the speed request which would correspond to full-scale output from
-the spindle control pin. For example with a 10 V drive voltage and a
-10000 RPM scalemax a value of 10,000 RPM on the spinout pin would
-produce 10 V output. However, if spinout-maxlim were set to 5,000 RPM
-then no voltage above 5 V would be output.
+(float rw) .7i76.0.0.spinout-scalemax:: The spindle speed scaling.
+  This is the speed request which would correspond to full-scale output from the spindle control pin.
+  For example with a 10 V drive voltage and a 10000 RPM scalemax a value of 10,000 RPM on the spinout pin would produce 10 V output.
+  However, if spinout-maxlim were set to 5000 RPM then no voltage above 5 V would be output.
 
-(u32 ro) .7i76.0.0.swrevision: The onboard firmware revision number.
-Utilities (man setsserial for details) exist to update and change this
-firmware.
+(u32 ro) .7i76.0.0.swrevision:: The onboard firmware revision number.
+  Utilities (man setsserial for details) exist to update and change this firmware.
 
 === 7I77
 
@@ -282,59 +271,59 @@ manpage.
 
 *Pins:*
 
-(bit out) .7i77.0.0.input-NN: (NN = 0 to 31) 32 digital inputs.
+(bit out) .7i77.0.0.input-NN:: (NN = 0 to 31) 32 digital inputs.
 
-(bit in) .7i77.0.0.input-NN-not: (NN = 0 to 31) An inverted copy of the
+(bit in) .7i77.0.0.input-NN-not:: (NN = 0 to 31) An inverted copy of the
 inputs provided for convenience. The two complementary pins may be
 connected to different signal nets.
 
-(bit out) .7i77.0.0.output-NN: (NN = 0 to 15). 16 digital outputs. The
+(bit out) .7i77.0.0.output-NN:: (NN = 0 to 15). 16 digital outputs. The
 sense of the signal can be set via a parameter.
 
-(bit in) .7i77.0.0.spindir: This pin provides a means to drive the
+(bit in) .7i77.0.0.spindir:: This pin provides a means to drive the
 spindle VFD direction terminals on the 7I76 board.
 
-(bit in) .7i77.0.0.spinena: This pin drives the spindle-enable terminals
+(bit in) .7i77.0.0.spinena:: This pin drives the spindle-enable terminals
 on the 7I76 board.
 
-(float in) .7i77.0.0.spinout: This controls the analog output of the
+(float in) .7i77.0.0.spinout:: This controls the analog output of the
 7I77. This is intended as a speed control signal for a VFD.
 
-(bit in) .7i77.0.1.analogena: This pin drives the analog enable
+(bit in) .7i77.0.1.analogena:: This pin drives the analog enable
 terminals on the 7I77 board.
 
-(float in) .7i77.0.1.analogoutN: (N = 0 to 5) This controls the analog
+(float in) .7i77.0.1.analogoutN:: (N = 0 to 5) This controls the analog
 output of the 7I77.
 
 *Parameters:*
 
-(bit rw) .7i77.0.0.output-NN-invert: Invert the sense of the
+(bit rw) .7i77.0.0.output-NN-invert:: Invert the sense of the
 corresponding output pin.
 
-(bit rw) .7i77.0.0.spindir-invert: Invert the sense of the spindle
+(bit rw) .7i77.0.0.spindir-invert:: Invert the sense of the spindle
 direction pin.
 
-(bit rw) .7i77.0.0.spinena-invert: Invert the sense of the
+(bit rw) .7i77.0.0.spinena-invert:: Invert the sense of the
 spindle-enable pin.
 
-(float rw) .7i77.0.0.spinout-maxlim: The maximum speed request allowable
+(float rw) .7i77.0.0.spinout-maxlim:: The maximum speed request allowable
 
-(float rw) .7i77.0.0.spinout-minlim: The minimum speed request.
+(float rw) .7i77.0.0.spinout-minlim:: The minimum speed request.
 
-(float rw) .7i77.0.0.spinout-scalemax: The spindle speed scaling. This
+(float rw) .7i77.0.0.spinout-scalemax:: The spindle speed scaling. This
 is the speed request which would correspond to full-scale output from
 the spindle control pin. For example with a 10 V drive voltage and a
 10000 RPM scalemax a value of 10,000 RPM on the spinout pin would
 produce 10 V output. However, if spinout-maxlim were set to 5,000 RPM
 then no voltage above 5 V would be output.
 
-(float rw) .7i77.0.0.analogoutN-maxlim: (N = 0 to 5) The maximum speed
+(float rw) .7i77.0.0.analogoutN-maxlim:: (N = 0 to 5) The maximum speed
 request allowable
 
-(float rw) .7i77.0.0.analogoutN-minlim: (N = 0 to 5) The minimum speed
+(float rw) .7i77.0.0.analogoutN-minlim:: (N = 0 to 5) The minimum speed
 request.
 
-(float rw) .7i77.0.0.analogoutN-scalemax: (N = 0 to 5) The analog speed
+(float rw) .7i77.0.0.analogoutN-scalemax:: (N = 0 to 5) The analog speed
 scaling. This is the speed request which would correspond to full-scale
 output from the spindle control pin. For example with a 10V drive
 voltage and a 10,000 rpm scalemax a value of 10,000 rpm on the spinout
@@ -354,30 +343,30 @@ channels oninputs 0 through 7
 
 *Pins:*
 
-(bit in) .7i69.0.0.output-NN: Digital output. Sense can be inverted with
+(bit in) .7i69.0.0.output-NN:: Digital output. Sense can be inverted with
 the corresponding Parameter.
 
-(bit out) .7i69.0.0.input-NN: Digital input
+(bit out) .7i69.0.0.input-NN:: Digital input
 
-(bit out) .7i69.0.0.input-NN-not: Digital input, inverted.
+(bit out) .7i69.0.0.input-NN-not:: Digital input, inverted.
 
 *Parameters:*
 
-(u32 ro) .7i69.0.0.nvbaudrate: Indicates the vbaud rate. This probably
+(u32 ro) .7i69.0.0.nvbaudrate:: Indicates the vbaud rate. This probably
 should not be altered.
 
-(u32 ro) .7i69.0.0.nvunitnumber: Indicates the serial number of the
+(u32 ro) .7i69.0.0.nvunitnumber:: Indicates the serial number of the
 device and should match a sticker on the card. This can be useful for
 working out which card is which.
 
-(u32 ro) .7i69.0.0.nvwatchdogtimeout: The sserial remote watchdog
+(u32 ro) .7i69.0.0.nvwatchdogtimeout:: The sserial remote watchdog
 timeout. This is separate from the Anything-IO card timeout. This is
 unlikely to need to be changed.
 
-(bit rw) .7i69.0.0.output-NN-invert: Invert the sense of the
+(bit rw) .7i69.0.0.output-NN-invert:: Invert the sense of the
 corresponding output pin.
 
-(u32 ro) .7i69.0.0.swrevision: The onboard firmware revision number.
+(u32 ro) .7i69.0.0.swrevision:: The onboard firmware revision number.
 Utilities exist to update and change this firmware.
 
 === 7I70
@@ -400,30 +389,30 @@ plus field voltage
 
 *Pins:*
 
-(float out) .7i70.0.0.analogN (modes 1 and 2 only) Analogue input
-values.
+(float out) .7i70.0.0.analogN (modes 1 and 2 only):: Analogue input values.
 
-(float out) .7i70.0.0.fieldvoltage (mode 2 only) Field voltage
-monitoring pin.
+(float out) .7i70.0.0.fieldvoltage (mode 2 only):: Field voltage monitoring pin.
 
-(bit out) .7i70.0.0.input-NN: (NN = 0 to 47) 48 digital inputs.
+(bit out) .7i70.0.0.input-NN:: (NN = 0 to 47) 48 digital inputs.
 
-(bit in) .7i70.0.0.input-NN-not: (NN = 0 to 47) An inverted copy of the
+(bit in) .7i70.0.0.input-NN-not:: (NN = 0 to 47) An inverted copy of the
 inputs provided for convenience. The two complementary pins may be
-connected to different signal nets. *Parameters:*
+connected to different signal nets.
 
-(u32 ro) .7i70.0.0.nvbaudrate: Indicates the vbaud rate. This probably
+*Parameters:*
+
+(u32 ro) .7i70.0.0.nvbaudrate:: Indicates the vbaud rate. This probably
 should not be altered.
 
-(u32 ro) .7i70.0.0.nvunitnumber: Indicates the serial number of the
+(u32 ro) .7i70.0.0.nvunitnumber:: Indicates the serial number of the
 device and should match a sticker on the card. This can be useful for
 working out which card is which.
 
-(u32 ro) .7i70.0.0.nvwatchdogtimeout: The sserial remote watchdog
+(u32 ro) .7i70.0.0.nvwatchdogtimeout:: The sserial remote watchdog
 timeout. This is separate from the Anything-IO card timeout. This is
 unlikely to need to be changed.
 
-(u32 ro) .7i69.0.0.swrevision: The onboard firmware revision number.
+(u32 ro) .7i69.0.0.swrevision:: The onboard firmware revision number.
 Utilities exist to update and change this firmware.
 
 === 7I71
@@ -441,30 +430,32 @@ read back field voltage
 
 *Pins:*
 
-(float out) .7i71.0.0.fieldvoltage (mode 2 only) Field voltage
+(float out) .7i71.0.0.fieldvoltage (mode 2 only):: Field voltage
 monitoring pin.
 
-(bit out) .7i71.0.0.output-NN: (NN = 0 to 47) 48 digital outputs. The
+(bit out) .7i71.0.0.output-NN:: (NN = 0 to 47) 48 digital outputs. The
 sense may be inverted by the invert parameter.
 
-(bit out) .7i71.0.0.output-NN: (NN = 0 to 47) 48 digital outputs. The
-sense may be inverted by the invert parameter. *Parameters:*
+(bit out) .7i71.0.0.output-NN:: (NN = 0 to 47) 48 digital outputs. The
+sense may be inverted by the invert parameter.
 
-(bit rw) .7i71.0.0.output-NN-invert: Invert the sense of the
+*Parameters:*
+
+(bit rw) .7i71.0.0.output-NN-invert:: Invert the sense of the
 corresponding output pin.
 
-(u32 ro) .7i71.0.0.nvbaudrate: Indicates the vbaud rate. This probably
+(u32 ro) .7i71.0.0.nvbaudrate:: Indicates the vbaud rate. This probably
 should not be altered.
 
-(u32 ro) .7i71.0.0.nvunitnumber: Indicates the serial number of the
+(u32 ro) .7i71.0.0.nvunitnumber:: Indicates the serial number of the
 device and should match a sticker on the card. This can be useful for
 determining which card is which.
 
-(u32 ro) .7i71.0.0.nvwatchdogtimeout: The sserial remote watchdog
+(u32 ro) .7i71.0.0.nvwatchdogtimeout:: The sserial remote watchdog
 timeout. This is separate from the Anything-IO card timeout. This is
 unlikely to need to be changed.
 
-(u32 ro) .7i69.0.0.swrevision: The onboard firmware revision number.
+(u32 ro) .7i69.0.0.swrevision:: The onboard firmware revision number.
 Utilities exist to update and change this firmware.
 
 === 7I73
@@ -488,26 +479,26 @@ ENCODER + ANALOG IN FAST DISPLAY
 
 *Pins:*
 
-(float out) .7i73.0.0.analoginN: Analogue inputs. Up to 8 channels may
+(float out) .7i73.0.0.analoginN:: Analogue inputs. Up to 8 channels may
 be available dependent on software and hardware configuration modes (see
 the PDF manual downloadable from www.mesanet.com).
 
-(u32 in) .7i73.0.1.display (modes 1 and 2). Data for LCD display. This
+(u32 in) .7i73.0.1.display (modes 1 and 2):: Data for LCD display. This
 pin may be conveniently driven by the HAL "lcd" component which allows
 the formatted display of the values any number of HAL pins and textual
 content.
 
-(u32 in) .7i73.0.1.display32 (mode 2 only). 4 bytes of data for LCD
+(u32 in) .7i73.0.1.display32 (mode 2 only):: 4 bytes of data for LCD
 display. This mode is not supported by the HAL "lcd" component.
 
-(s32 out) .7i73.0.1.encN: The position of the MPG encoder counters.
+(s32 out) .7i73.0.1.encN:: The position of the MPG encoder counters.
 
-(bit out) .7i73.0.1.input-NN: Up to 24 digital inputs (dependent on
+(bit out) .7i73.0.1.input-NN:: Up to 24 digital inputs (dependent on
 config)
 
-(bit out) .7i73.0.1.input-NN-not: Inverted copy of the digital inputs
+(bit out) .7i73.0.1.input-NN-not:: Inverted copy of the digital inputs
 
-(bit in) .7i73.0.1.output-NN: Up to 22 digital outputs (dependent on
+(bit in) .7i73.0.1.output-NN:: Up to 22 digital outputs (dependent on
 config)
 
 *Parameters:*
@@ -521,7 +512,7 @@ config)
 
 For further details of the use of the above see the Mesa manual.
 
-(bit rw) .7i73.0.1.output-01-invert: Invert the corresponding output
+(bit rw) .7i73.0.1.output-01-invert:: Invert the corresponding output
 bit.
 
-(s32 ro) .7i73.0.1.swrevision: The version of firmware installed.
+(s32 ro) .7i73.0.1.swrevision:: The version of firmware installed.
