--- a/docs/src/man/man9/stepgen.9.adoc
+++ b/docs/src/man/man9/stepgen.9.adoc
@@ -6,7 +6,7 @@ stepgen - software step pulse generation
 
 == SYNOPSIS
 
-*loadrt stepgen step_type=*_type0_[,_type1_...] [*ctrl_type=*_type0_[,_type1_...]] [*user_step_type=#,#*...]
+**loadrt stepgen step_type=**_type0_[,_type1_...] [**ctrl_type=**_type0_[,_type1_...]] [**user_step_type=#,#**...]
 
 == DESCRIPTION
 
@@ -83,71 +83,65 @@ type 15: user-specified::
 
 == FUNCTIONS
 
-*stepgen.make-pulses *(no floating-point)::
-  Generates the step pulses, using information computed by
-  *update-freq*. Must be called as frequently as possible, to maximize
-  the attainable step rate and minimize jitter. Operates on all channels
-  at once.
-*stepgen.capture-position *(uses floating point)::
-  Captures position feedback value from the high speed code and makes it
-  available on a pin for use elsewhere in the system. Operates on all
-  channels at once.
-*stepgen.update-freq *(uses floating point)::
-  Accepts a velocity or position command and converts it into a form
-  usable by *make-pulses* for step generation. Operates on all channels
-  at once.
+*stepgen.make-pulses* (no floating-point)::
+  Generates the step pulses, using information computed by *update-freq*.
+  Must be called as frequently as possible, to maximize the attainable step rate and minimize jitter.
+  Operates on all channels at once.
+*stepgen.capture-position* (uses floating point)::
+  Captures position feedback value from the high speed code and makes it available on a pin for use elsewhere in the system.
+  Operates on all channels at once.
+*stepgen.update-freq* (uses floating point)::
+  Accepts a velocity or position command and converts it into a form usable by *make-pulses* for step generation.
+  Operates on all channels at once.
 
 == PINS
 
-*stepgen.*_N_*.counts* s32 out::
-  The current position, in counts, for channel _N_. Updated by
-  *capture-position*.
-*stepgen.*_N_*.position-fb* float out::
-  The current position, in length units (see parameter
-  *position-scale*). Updated by *capture-position*. The resolution of
-  *position-fb* is much finer than a single step. If you need to see
-  individual steps, use *counts*.
-*stepgen.*_N_*.enable* bit in::
+**stepgen.**__N__**.counts** s32 out::
+  The current position, in counts, for channel _N_. Updated by *capture-position*.
+**stepgen.**__N__**.position-fb** float out::
+  The current position, in length units (see parameter *position-scale*).
+  Updated by *capture-position*. The resolution of *position-fb* is much finer than a single step.
+  If you need to see individual steps, use *counts*.
+**stepgen.**__N__**.enable** bit in::
   Enables output steps - when false, no steps are generated.
-*stepgen.*_N_*.velocity-cmd* float in (velocity mode only)::
+**stepgen.**__N__**.velocity-cmd** float in (velocity mode only)::
   Commanded velocity, in length units per second (see parameter
   *position-scale*).
-*stepgen.*_N_*.position-cmd* float in (position mode only)::
+**stepgen.**__N__**.position-cmd** float in (position mode only)::
   Commanded position, in length units (see parameter *position-scale).*
-*stepgen.*_N_*.step* bit out (step type 0 only)::
+**stepgen.**__N__**.step** bit out (step type 0 only)::
   Step pulse output.
-*stepgen.*_N_*.dir* bit out (step type 0 only)::
+**stepgen.**__N__**.dir** bit out (step type 0 only)::
   Direction output: low for forward, high for reverse.
-*stepgen.*_N_*.up* bit out (step type 1 only)::
+**stepgen.**__N__**.up** bit out (step type 1 only)::
   Count up output, pulses for forward steps.
-*stepgen.*_N_*.down* bit out (step type 1 only)::
+**stepgen.**__N__**.down** bit out (step type 1 only)::
   Count down output, pulses for reverse steps.
-*stepgen.*_N_*.phase-A* thru *phase-E* bit out (step types 2-14 only)::
+**stepgen.**__N__**.phase-A** thru *phase-E* bit out (step types 2-14 only)::
   Output bits. *phase-A* and *phase-B* are present for step types 2-14,
-  *phase-C* for types 3-14, *phase-D* for types 5-14, and *phase-E* for
-  types 11-14. Behavior depends on selected stepping type.
+  *phase-C* for types 3-14, *phase-D* for types 5-14, and *phase-E* for types 11-14.
+  Behavior depends on selected stepping type.
 
 == PARAMETERS
 
 *stepgen.*_N_*.frequency* float ro::
   The current step rate, in steps per second, for channel _N_.
 *stepgen.*_N_*.maxaccel* float rw::
-  The acceleration/deceleration limit, in length units per second
-  squared.
+  The acceleration/deceleration limit, in length units per second squared.
 *stepgen.*_N_*.maxvel* float rw::
-  The maximum allowable velocity, in length units per second. If the
-  requested maximum velocity cannot be reached with the current
+  The maximum allowable velocity, in length units per second.
+  If the requested maximum velocity cannot be reached with the current
   combination of scaling and *make-pulses* thread period, it will be
   reset to the highest attainable value.
 *stepgen.*_N_*.position-scale* float rw::
   The scaling for position feedback, position command, and velocity
   command, in steps per length unit.
 *stepgen.*_N_*.rawcounts* s32 ro::
-  The position in counts, as updated by *make-pulses*. (Note: this is
-  updated more frequently than the *counts* pin.)
+  The position in counts, as updated by *make-pulses*.
+  (Note: this is updated more frequently than the *counts* pin.)
 *stepgen.*_N_*.steplen* u32 rw::
-  The length of the step pulses, in nanoseconds. Measured from rising
-  edge to falling edge.
+  The length of the step pulses, in nanoseconds.
+  Measured from rising edge to falling edge.
 *stepgen.*_N_*.stepspace* u32 rw (step types 0 and 1 only)::
   The minimum space between step pulses, in nanoseconds. Measured from
   falling edge to rising edge. The actual time depends on the step rate
@@ -162,8 +156,7 @@ type 15: user-specified::
   The minimum hold time of direction after step, in nanoseconds.
   Measured from falling edge of step to change of direction.
 *stepgen.*_N_*.dirdelay* u32 rw (step types 1 and higher only)::
-  The minimum time between a forward step and a reverse step, in
-  nanoseconds.
+  The minimum time between a forward step and a reverse step, in nanoseconds.
 
 == TIMING
 
