--- a/docs/src/man/man9/weighted_sum.9.adoc
+++ b/docs/src/man/man9/weighted_sum.9.adoc
@@ -6,10 +6,9 @@ weighted_sum - convert a group of bits to an integer
 
 == SYNOPSIS
 
-*loadrt weighted_sum wsum_sizes=__size[,size,...]__*
+**loadrt weighted_sum wsum_sizes=**__size__[,__size__,...]
 
-Creates weighted sum groups each with the given number of input bits
-(_size_).
+Creates weighted sum groups each with the given number of input bits (_size_).
 
 == DESCRIPTION
 
@@ -19,11 +18,10 @@ weight of the m-th bit is 2^m. This is similar to a binary coded decimal
 but with more options. The hold bit stops processing the input changes
 so the sum will not change.
 
-The default value for each weight is 2^m where m is the bit number. This
-results in a binary to unsigned conversion.
+The default value for each weight is 2^m where m is the bit number.
+This results in a binary to unsigned conversion.
 
-There is a limit of 8 weighted summers and each may have up to 16 input
-bits.
+There is a limit of 8 weighted summers and each may have up to 16 input bits.
 
 == FUNCTIONS
 
@@ -32,19 +30,18 @@ bits.
 
 == PINS
 
-*wsum._N_*.bit.*_M_*.in* bit in*::
+**wsum.**_N_**.bit.**_M_**.in** bit in::
   The _m_'th input of weighted summer _n_.
-*wsum._N_*.hold* bit in*::
-  When TRUE, the _sum_ output does not change. When FALSE, the _sum_
-  output tracks the _bit_ inputs according to the weights and offset.
-*wsum._N_*.sum* signed out*::
+**wsum.**_N_**.hold** bit in::
+  When TRUE, the _sum_ output does not change.
+  When FALSE, the _sum_ output tracks the _bit_ inputs according to the weights and offset.
+**wsum.**_N_**.sum** signed out::
   The output of the weighted summer
-*wsum._N_*.bit.*_M_*.weight* signed rw*::
-  The weight of the _m_'th input of weighted summer _n_. The default
-  value is 2^__m__.
-*wsum._N_*.offset* signed rw*::
-  The offset is added to the weights corresponding to all TRUE inputs to
-  give the final sum.
+**wsum.**_N_**.bit.**_M_**.weight** signed rw::
+  The weight of the _m_'th input of weighted summer _n_.
+  The default value is 2^__m__.
+**wsum.**_N_**.offset** signed rw::
+  The offset is added to the weights corresponding to all TRUE inputs to give the final sum.
 
 == SEE ALSO
 
